<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings">

    <PreferenceCategory android:title="@string/settings_cat_about">
        <org.amnezia.awg.preference.VersionPreference
            android:key="version"
            android:layout="@layout/preference_awg_about" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cat_general">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="restore_on_boot"
            android:singleLineTitle="false"
            android:summaryOff="@string/restore_on_boot_summary_off"
            android:summaryOn="@string/restore_on_boot_summary_on"
            android:title="@string/restore_on_boot_title" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dark_theme"
            android:singleLineTitle="false"
            android:summaryOff="@string/dark_theme_summary_off"
            android:summaryOn="@string/dark_theme_summary_on"
            android:title="@string/dark_theme_title" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="multiple_tunnels"
            android:singleLineTitle="false"
            android:summaryOff="@string/multiple_tunnels_summary_off"
            android:summaryOn="@string/multiple_tunnels_summary_on"
            android:title="@string/multiple_tunnels_title" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="allow_remote_control_intents"
            android:singleLineTitle="false"
            android:summaryOff="@string/allow_remote_control_intents_summary_off"
            android:summaryOn="@string/allow_remote_control_intents_summary_on"
            android:title="@string/allow_remote_control_intents_title" />
        <org.amnezia.awg.preference.QuickTilePreference android:key="quick_tile" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cat_actions">
        <org.amnezia.awg.preference.ZipExporterPreference
            android:key="zip_exporter"
            android:icon="@drawable/ic_export" />
        <Preference
            android:key="log_viewer"
            android:icon="@drawable/ic_log"
            android:singleLineTitle="false"
            android:summary="@string/log_viewer_pref_summary"
            android:title="@string/log_viewer_pref_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cat_advanced">
        <org.amnezia.awg.preference.ToolsInstallerPreference android:key="tools_installer" />
        <org.amnezia.awg.preference.KernelModuleEnablerPreference android:key="kernel_module_enabler" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
